assets/css/parts/search.css
.search-form {
    white-space: nowrap;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.search-icon {
    margin-right: 10px;
}

.search-input-container {
    border-radius: var(--radius-stronger);
    border: 1px solid var(--color-gray);
    color: var(--color-grayer);
    padding: 12px 20px;
    margin-right: 10px;
    width: 100%;
    display: flex;
    align-items: center;
}

.search-input {
    border: none;
    width: 90%;
    font-size: var(--font-size-input);
}

.search-input-container:hover, .search-input-container:focus {
    box-shadow: var(--box-shadow-default);
    border-color: var(--color-white);
}

.search-button {
    padding: 15px 60px;
    border-radius: var(--radius-stronger);
    margin: 0;
    background-color: var(--color-secondary);
    color: var(--color-white);
    box-shadow: var(--box-shadow-default);
    font-size: var(--font-size-button);
    border: none;
    cursor: pointer;
    display: inline-block;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.search-button:hover {
    box-shadow: var(--box-shadow-strong);
    color: var(--color-white);
}

@media only screen and (max-width: 991px) {
    .search-button {
        display: none;
    }
}

